--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,14 @@
     "python.autoComplete.extraPaths": [
         "/home/skpro19/catkin_ws/devel/lib/python2.7/dist-packages",
         "/opt/ros/melodic/lib/python2.7/dist-packages"
+    ],
+    "files.associations": {
+        "ostream": "cpp",
+        "iostream": "cpp",
+        "mutex": "cpp"
+    },
+    "python.analysis.extraPaths": [
+        "/home/skpro19/catkin_ws/devel/lib/python2.7/dist-packages",
+        "/opt/ros/melodic/lib/python2.7/dist-packages"
     ]
 }
