--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,18 @@ add_compile_options(-std=c++11)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  
   geometry_msgs
   roscpp
   std_msgs
   nav_msgs
-  geometry_msgs
   move_base_msgs
   actionlib
   costmap_2d
+  move_base
+  visualization_msgs
+  
+  
 )
 
 ## System dependencies are found with CMake's conventions
@@ -105,11 +109,16 @@ find_package(Boost REQUIRED COMPONENTS system)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES my_explore_lite
-  CATKIN_DEPENDS nav_msgs roscpp std_msgs message_runtime
-#  DEPENDS system_lib
-)
+  CATKIN_DEPENDS 
+    nav_msgs 
+    roscpp 
+    std_msgs 
+    message_runtime
+    move_base_msgs
+    move_base
+    visualization_msgs
+    
+  )
 
 ###########
 ## Build ##
@@ -125,14 +134,17 @@ include_directories(
 )
 
 ## Declare a C++ library
-# add_library(${PROJECT_NAME}
+#add_library(${PROJECT_NAME}
+
+
+
 #   src/${PROJECT_NAME}/my_explore_lite.cpp
 # )
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#add_dependencies(explore_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
@@ -197,8 +209,10 @@ include_directories(
 # )
 
 
-add_executable(explore_node src/explore.cpp)
-target_link_libraries(explore_node ${catkin_LIBRARIES})
+add_executable(explore_node src/main.cpp)
+
+target_link_libraries( explore_node ${catkin_LIBRARIES} )
+
 
 
 #############
@@ -213,3 +227,4 @@ target_link_libraries(explore_node ${catkin_LIBRARIES})
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+  
