--- a/config/costmap_common.yaml
+++ b/config/costmap_common.yaml
@@ -6,7 +6,7 @@ update_frequency: 0.1
 publish_frequency: 1.0
 transform_tolerance: 2
 
-resolution: 0.1
+resolution: 1  #meters/cell
 
 obstacle_range: 5.5
 raytrace_range: 6.0
